unpackaged/main/default/objects/pse__ProjectVarianceBatch__c/fields/pse__ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>pse__ApexJobId__c</fullName>
    <description>Unique identifier for the current batch Apex job.</description>
    <inlineHelpText>Unique identifier for the current batch Apex job.</inlineHelpText>
    <label>Apex Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>