unpackaged/main/default/objects/pse__ProjectVarianceBatch__c/fields/pse__NotificationType__c.field-meta.xml
<CustomField>
    <fullName>pse__NotificationType__c</fullName>
    <description>The type of notification sent when the process completed: Successful, Failure, or Mixed.</description>
    <formula>IF( pse__TotalNumberOfLogs__c = 0, 'Undefined',
    IF ( AND( pse__TotalNumberOfErrors__c=0,pse__TotalNumberOfAborts__c=0,pse__TotalNumberOfExternal__c=0), 
        'Successful', 
        IF(pse__TotalNumberOfErrors__c = pse__TotalNumberOfLogs__c, 
            'Failure', 
            IF(pse__TotalNumberOfAborts__c &gt; 0, 
                'Failure', 
                IF( pse__TotalNumberOfExternal__c &gt; 0, 
                    'Failure', 
                    'Mixed' 
                ) 
            ) 
        )
    )     
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The type of notification sent when the process completed: Successful, Failure, or Mixed.</inlineHelpText>
    <label>Notification Type</label>
    <type>Text</type>
</CustomField>