unpackaged/main/default/objects/pse__ProjectVarianceBatch__c/fields/pse__TotalNumberOfErrors__c.field-meta.xml
<CustomField>
    <fullName>pse__TotalNumberOfErrors__c</fullName>
    <description>The number of logs where Log Type is Error.</description>
    <inlineHelpText>The number of logs where Log Type is Error.</inlineHelpText>
    <label>Total Number of Errors</label>
    <summaryFilterItems>
        <field>pse__ProjectVarianceBatchLog__c.pse__LogType__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>pse__ProjectVarianceBatchLog__c.pse__ProjectVarianceBatch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>