unpackaged/main/default/objects/pse__ProjectVarianceBatch__c/fields/pse__TotalNumberOfLogs__c.field-meta.xml
<CustomField>
    <fullName>pse__TotalNumberOfLogs__c</fullName>
    <description>The total number of logs.</description>
    <inlineHelpText>The total number of logs.</inlineHelpText>
    <label>Total Number of Logs</label>
    <summaryForeignKey>pse__ProjectVarianceBatchLog__c.pse__ProjectVarianceBatch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>